--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -42,7 +42,7 @@
             <div class="pages-sitemap__title">Карта сайта</div>
             <div class="pages-sitemap__nav">
               <a href="ui-kit">Ui-kit</a>
-              <a href="/">Главная страница</a>
+              <a href="/main">Главная страница</a>
             </div>
           </div>
         </div>
