--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -8,7 +8,9 @@
   <body>
     <div class="wrapper">
 
-      @@include('../../components/header/index.html')
+      @@include('../../components/header/index.html',{
+        "class":"header--main"
+      })
 
       <main>
         <div class="container">
