feat: add button ui

--- a/src/pages/ui-kit/index.html
+++ b/src/pages/ui-kit/index.html
@@ -32,8 +32,8 @@
       .ui-kit__row {
         margin-bottom: 15px;
         display: flex;
-        justify-content: space-between;
         align-items: center;
+        gap: 3%;
       }
       .ui-kit__col {
         width: 30%;
@@ -83,13 +83,21 @@
               <div class="ui-kit__block">
                 <div class="ui-kit__row">
                   <div class="ui-kit__col">
-                    <button>Кнопка 1</button>
+                    <button class="button button--lg">Кнопка</button>
                   </div>
                   <div class="ui-kit__col">
-                    <button>Кнопка 2</button>
+                    <button class="button">Кнопка</button>
                   </div>
                   <div class="ui-kit__col">
-                    <button>Кнопка 3</button>
+                    <button class="button button--sm">Кнопка</button>
+                  </div>
+                </div>                    
+                <div class="ui-kit__row">
+                  <div class="ui-kit__col">
+                    <button class="button button--border">Кнопка</button>
+                  </div>
+                  <div class="ui-kit__col" style="background: #333333; padding: 10px; text-align: center;">
+                    <button class="button button--white-border">Кнопка</button>
                   </div>
                 </div>                    
               </div>
