--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -13,6 +13,7 @@
       })
 
       <main>
+        @@include('../../components/hero/index.html')
         <div class="container">
           
           
@@ -23,6 +24,7 @@
 
     </div>
 
+    <script src="/assets/lib/lib.js"></script>
     <script src="/assets/js/scripts.min.js"></script>
 
   </body>
