feat: add benefits section

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -14,7 +14,7 @@
 
       <main>
         @@include('../../components/hero/index.html')
-        
+
         <section class="section">
           <div class="container">
             <h2 class="text-center">We are Createx Construction Bureau </h2>
@@ -23,6 +23,14 @@
               @@include('../../ui/video-cover/index.html')
             </div>            
           </div>          
+        </section>
+
+        <section class="section section--sm-pd section--hidden">          
+          <div class="container">
+            <h2 class="text-center">Our core values</h2>
+            <p class="text-center text-large">Our mission is to set the highest standards for construction sphere.</p>
+            @@include('../../components/benefits/index.html')
+          </div> 
         </section>
         
       </main> 
