hotfix: change path

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.min.css">
+    <link rel="stylesheet" href="assets/css/style.min.css">
     <title>Карта сайта</title>
     <style>
       .pages-sitemap {
@@ -42,7 +42,7 @@
             <div class="pages-sitemap__title">Карта сайта</div>
             <div class="pages-sitemap__nav">
               <a href="ui-kit">Ui-kit</a>
-              <a href="/main">Главная страница</a>
+              <a href="main">Главная страница</a>
             </div>
           </div>
         </div>
@@ -50,7 +50,7 @@
       </main>  
     </div>
     
-    <script src="/assets/js/scripts.min.js"></script>
+    <script src="assets/js/scripts.min.js"></script>
 
   </body>
 </html>
