chore: build project

--- a/main.html
+++ b/main.html
@@ -4,8 +4,8 @@
   <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/lib/lib.css">
-  <link rel="stylesheet" href="/assets/css/style.min.css">
+  <link rel="stylesheet" href="assets/lib/lib.css">
+  <link rel="stylesheet" href="assets/css/style.min.css">
   <title>Главная страница</title>
 </head>
 
@@ -277,11 +277,9 @@
 
   </div>
 </footer>
+<script src="assets/lib/lib.js"></script>
+<script src="assets/js/scripts.min.js"></script>
 
     </div>
-
-    <script src="/assets/lib/lib.js"></script>
-    <script src="/assets/js/scripts.min.js"></script>
-
   </body>
 </html>
