feat: implement small form component

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -32,6 +32,12 @@
             @@include('../../components/benefits/index.html')
           </div> 
         </section>
+
+        <section class="section section--absolute">          
+          <div class="container">
+            @@include('../../components/small-form/index.html')
+          </div> 
+        </section>
         
       </main> 
 
