feat: implement modal ui connect

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -44,5 +44,7 @@
       @@include('../../components/footer/index.html')
 
     </div>
+    @@include('../../ui/modal/index.html')
+    
   </body>
 </html>
