--- a/src/ui/modal/index.html
+++ b/src/ui/modal/index.html
@@ -76,17 +76,17 @@
             <span class="input__lable">Name*</span>
           </label>
           <label class="modal__input input">
-            <input class="input__native" name="location" type="text" placeholder="Choose your location" required> 
+            <select class="input__native select" name="location" required>
+              <option value="" disabled selected hidden>Choose your location</option>
+              <option value="Location 1">Location 1</option>
+              <option value="Location 2">Location 2</option>
+              <option value="Location 3">Location 3</option>
+              <option value="Location 4">Location 4</option>
+              <option value="Location 5">Location 5</option>
+              <option value="Location 6">Location 6</option>
+            </select>
             <span class="input__lable">Location*</span>
-          </label>
-          <select name="location">
-            <option value="Location 1">Location 1</option>
-            <option value="Location 2">Location 2</option>
-            <option value="Location 3">Location 3</option>
-            <option value="Location 4">Location 4</option>
-            <option value="Location 5">Location 5</option>
-            <option value="Location 6">Location 6</option>
-          </select>
+          </label>          
           <label class="modal__input input">
             <input class="input__native" name="phone" type="tel" placeholder="Your phone number" required> 
             <span class="input__lable">Phone*</span>
