feat: add our services section

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -38,6 +38,22 @@
             @@include('../../components/small-form/index.html')
           </div> 
         </section>
+
+        <section class="section section--md-pd section--cover-bg">    
+          <picture>
+            <source type="image/webp" srcset="assets/img/background/bg-image.webp">
+            <img class="section__cover-bg" src="assets/img/background/bg-image.jpg" alt="">
+          </picture>  
+          <div class="container">
+            <h2 class="text-center">Our services</h2>
+            <p class="text-center text-large">Createx Construction Bureau is a construction giant with a full range of construction services.</p>
+            @@include('../../components/our-services/index.html')
+            <div class="section__bottom">
+              <h4>Learn more about our services</h4>
+              <a class="section__button button button--lg" href="#">View services</a>
+            </div>
+          </div>           
+        </section>
         
       </main> 
 
