chore: build project

--- a/main.html
+++ b/main.html
@@ -217,6 +217,71 @@
 </div>
           </div> 
         </section>
+
+        <section class="section section--md-pd section--cover-bg">    
+          <picture>
+            <source type="image/webp" srcset="assets/img/background/bg-image.webp">
+            <img class="section__cover-bg" src="assets/img/background/bg-image.jpg" alt="">
+          </picture>  
+          <div class="container">
+            <h2 class="text-center">Our services</h2>
+            <p class="text-center text-large">Createx Construction Bureau is a construction giant with a full range of construction services.</p>
+            <div class="our-services">
+  <div class="our-services__item">
+    <div class="our-services__item-content">
+      <svg class="our-services__icon icon-svg">
+        <use xlink:href="assets/img/svg-sprite/sprite.svg#ic-construction"></use>
+      </svg>
+      <h5 class="our-services__title">Construction</h5>
+    </div>
+    <picture class="our-services__img">
+      <source type="image/webp" srcset="assets/img/services/construction.webp">
+      <img src="assets/img/services/construction.jpg" alt="Construction">
+    </picture>
+  </div>
+  <div class="our-services__item">
+    <div class="our-services__item-content">
+      <svg class="our-services__icon icon-svg">
+        <use xlink:href="assets/img/svg-sprite/sprite.svg#ic-plan"></use>
+      </svg>
+      <h5 class="our-services__title">Project Development</h5>
+    </div>
+    <picture class="our-services__img">
+      <source type="image/webp" srcset="assets/img/services/project.webp">
+      <img src="assets/img/services/project.jpg" alt="Project Development">
+    </picture>
+  </div>
+  <div class="our-services__item">
+    <div class="our-services__item-content">
+      <svg class="our-services__icon icon-svg">
+        <use xlink:href="assets/img/svg-sprite/sprite.svg#ic-pantone"></use>
+      </svg>
+      <h5 class="our-services__title">Interior Design</h5>
+    </div>
+    <picture class="our-services__img">
+      <source type="image/webp" srcset="assets/img/services/design.webp">
+      <img src="assets/img/services/design.jpg" alt="Interior Design">
+    </picture>
+  </div>
+  <div class="our-services__item">
+    <div class="our-services__item-content">
+      <svg class="our-services__icon icon-svg">
+        <use xlink:href="assets/img/svg-sprite/sprite.svg#ic-painting"></use>
+      </svg>
+      <h5 class="our-services__title">Repairs</h5>
+    </div>
+    <picture class="our-services__img">
+      <source type="image/webp" srcset="assets/img/services/repairs.webp">
+      <img src="assets/img/services/repairs.jpg" alt="Repairs">
+    </picture>
+  </div>
+</div>
+            <div class="section__bottom">
+              <h4>Learn more about our services</h4>
+              <a class="section__button button button--lg" href="#">View services</a>
+            </div>
+          </div>           
+        </section>
         
       </main> 
 
