fix: fix slider buttons

--- a/src/ui/slider/index.html
+++ b/src/ui/slider/index.html
@@ -11,8 +11,16 @@
   <div class="swiper-pagination slider__pagination"></div>
 
   <!-- If we need navigation buttons -->
-  <div class="slider__button-prev swiper-button-prev"></div>
-  <div class="slider__button-next swiper-button-next"></div>
+  <div class="slider__button-prev swiper-button-prev">
+    <svg class="icon-svg">
+      <use xlink:href="assets/img/svg-sprite/sprite.svg#left"></use>
+    </svg>
+  </div>
+  <div class="slider__button-next swiper-button-next">
+    <svg class="icon-svg">
+      <use xlink:href="assets/img/svg-sprite/sprite.svg#right"></use>
+    </svg>
+  </div>
 
   <!-- If we need scrollbar -->
   <div class="slider__scrollbar swiper-scrollbar"></div>
